@@ -1,3 +1,7 @@
+2002-06-27  Werner Koch  <wk@gnupg.org>
+
+	* cert.c (ksba_cert_get_auth_key_id): Skip keyIdentifier tag.
+
 2002-06-17  Werner Koch  <wk@gnupg.org>
 
 	* cms.c (write_encrypted_cont): Don't use write_octet_stream here
